--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-api-scaffold",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A base environment for creating a RESTful API with expressjs and socket-io",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,8 @@
     "dotenv": "16.0.0",
     "express": "4.18.1",
     "fully-typed": "2.1.1",
+    "pino": "7.11.0",
+    "pino-pretty": "7.6.1",
     "socket.io": "4.5.0"
   },
   "devDependencies": {
