--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-api-scaffold",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A base environment for creating a RESTful API with expressjs and socket-io",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nathanlewan/express-api-scaffold#readme",
   "dependencies": {
+    "cors": "2.8.5",
     "dotenv": "16.0.0",
     "express": "4.18.1",
     "fully-typed": "2.1.1",
